解决pad上横屏崩溃问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:theme="@style/TranslucentTheme">
+                  android:screenOrientation="landscape"
+                  android:theme="@style/TranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsActivity"
+                  android:screenOrientation="landscape"/>
         <activity android:name=".mvp.cemera.FullScreenVideoActivity"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape"
+                  />
         <service android:name=".RosConnectionService" />
 
     </application>
