--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-                  android:screenOrientation="landscape"
+                  android:screenOrientation="portrait"
                   android:theme="@style/TranslucentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,9 +37,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity"
-                  android:screenOrientation="landscape"/>
+                  android:screenOrientation="portrait"/>
         <activity android:name=".mvp.cemera.FullScreenVideoActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
                   />
         <service android:name=".RosConnectionService" />
 
